<resources>
    <string name="app_name">MyAlarm</string>
    <string name="no_time_selected">No Time Selected</string>
    <string name="no_date_selected">No Date Selected</string>
    <string name="add_remark_for_the_event">Add Remark for the event</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="importance_level">Importance level</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="notification">Notification</string>


    <!-- TODO: Remove or change this placeholder text -->
</resources>